# FuelEstate

./: README.md
contract/: Cargo.toml  Forc.toml  README.md
contract/src/: main.sw  old.sw
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AllItems.tsx  ItemCard.tsx  ListItem.tsx
frontend/src/components/Layout/: Navbar.tsx
frontend/src/contracts/: ContractAbi.d.ts
frontend/src/contracts/factories/: ContractAbi__factory.ts
