[package]
name = "sway-store"
description = "FuelEstate Sway Store"
version = "0.1.0"
edition = "2023"
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.39", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
